// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Block Class > should correctly calculate merkel tree 1`] = `
MerkleTree {
  "complete": false,
  "concatenator": [Function],
  "duplicateOdd": false,
  "fillDefaultHash": null,
  "hashFn": [Function],
  "hashLeaves": false,
  "isBitcoinTree": false,
  "layers": [
    [
      {
        "data": [
          109,
          229,
          248,
          234,
          137,
          1,
          211,
          169,
          171,
          205,
          87,
          157,
          44,
          195,
          53,
          64,
          158,
          104,
          156,
          234,
          29,
          131,
          38,
          250,
          248,
          143,
          193,
          228,
          16,
          219,
          78,
          148,
        ],
        "type": "Buffer",
      },
      {
        "data": [
          70,
          235,
          73,
          13,
          108,
          64,
          210,
          166,
          204,
          68,
          10,
          49,
          39,
          39,
          79,
          175,
          51,
          95,
          248,
          102,
          161,
          48,
          89,
          139,
          46,
          13,
          82,
          91,
          66,
          221,
          86,
          250,
        ],
        "type": "Buffer",
      },
    ],
    [
      {
        "data": [
          10,
          171,
          206,
          64,
          159,
          66,
          125,
          170,
          188,
          76,
          184,
          7,
          62,
          218,
          3,
          174,
          242,
          237,
          124,
          2,
          122,
          218,
          46,
          241,
          34,
          181,
          206,
          195,
          126,
          155,
          38,
          40,
        ],
        "type": "Buffer",
      },
    ],
  ],
  "leaves": [
    {
      "data": [
        109,
        229,
        248,
        234,
        137,
        1,
        211,
        169,
        171,
        205,
        87,
        157,
        44,
        195,
        53,
        64,
        158,
        104,
        156,
        234,
        29,
        131,
        38,
        250,
        248,
        143,
        193,
        228,
        16,
        219,
        78,
        148,
      ],
      "type": "Buffer",
    },
    {
      "data": [
        70,
        235,
        73,
        13,
        108,
        64,
        210,
        166,
        204,
        68,
        10,
        49,
        39,
        39,
        79,
        175,
        51,
        95,
        248,
        102,
        161,
        48,
        89,
        139,
        46,
        13,
        82,
        91,
        66,
        221,
        86,
        250,
      ],
      "type": "Buffer",
    },
  ],
  "sort": false,
  "sortLeaves": false,
  "sortPairs": false,
}
`;

exports[`Block Class > should fail to match merkle tree of a corrupted block 1`] = `
MerkleTree {
  "complete": false,
  "concatenator": [Function],
  "duplicateOdd": false,
  "fillDefaultHash": null,
  "hashFn": [Function],
  "hashLeaves": false,
  "isBitcoinTree": false,
  "layers": [
    [
      {
        "data": [
          100,
          43,
          231,
          226,
          6,
          40,
          106,
          4,
          69,
          141,
          216,
          213,
          185,
          64,
          105,
          92,
          101,
          120,
          254,
          249,
          254,
          142,
          81,
          127,
          34,
          165,
          220,
          25,
          172,
          76,
          36,
          187,
        ],
        "type": "Buffer",
      },
      {
        "data": [
          70,
          235,
          73,
          13,
          108,
          64,
          210,
          166,
          204,
          68,
          10,
          49,
          39,
          39,
          79,
          175,
          51,
          95,
          248,
          102,
          161,
          48,
          89,
          139,
          46,
          13,
          82,
          91,
          66,
          221,
          86,
          250,
        ],
        "type": "Buffer",
      },
    ],
    [
      {
        "data": [
          1,
          184,
          189,
          61,
          76,
          74,
          84,
          228,
          195,
          248,
          42,
          32,
          127,
          173,
          229,
          219,
          110,
          55,
          109,
          96,
          5,
          197,
          220,
          109,
          220,
          48,
          46,
          112,
          115,
          47,
          36,
          91,
        ],
        "type": "Buffer",
      },
    ],
  ],
  "leaves": [
    {
      "data": [
        100,
        43,
        231,
        226,
        6,
        40,
        106,
        4,
        69,
        141,
        216,
        213,
        185,
        64,
        105,
        92,
        101,
        120,
        254,
        249,
        254,
        142,
        81,
        127,
        34,
        165,
        220,
        25,
        172,
        76,
        36,
        187,
      ],
      "type": "Buffer",
    },
    {
      "data": [
        70,
        235,
        73,
        13,
        108,
        64,
        210,
        166,
        204,
        68,
        10,
        49,
        39,
        39,
        79,
        175,
        51,
        95,
        248,
        102,
        161,
        48,
        89,
        139,
        46,
        13,
        82,
        91,
        66,
        221,
        86,
        250,
      ],
      "type": "Buffer",
    },
  ],
  "sort": false,
  "sortLeaves": false,
  "sortPairs": false,
}
`;
